--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                   filters: ['in', 'start', 'not in', 'end'],
                   type: 'select',
                   label: 'Le field B',
-                  values: ['dhjdhf','djhdj'],
+                  values: [{id:'dhjdhf',name:'djhdj'}],
                   multiple: true,
               },
               fieldC: {
